--- a/style/style.css
+++ b/style/style.css
@@ -82,7 +82,7 @@
         top: 0px;
         right: 0px;
         bottom: 0px;
-        background-color: #A7727D;
+        background-color: #a7a393;
         padding: 2rem;
         box-shadow: 0 0 0 800vmax rgba(0, 0, 0, .5);
         transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
